[package]
name = "bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20"
bevy = "0.9"
rand = "0.8"
console_error_panic_hook = "0.1"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

