[package]
name = "bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.60", features = [ "HtmlInputElement" ] }
wasm-bindgen = "0.2" 
stylist = {version = "0.12.0", features=["yew_integration"]}
bevy = "0.9"
rand = "0.8"
console_error_panic_hook = "0.1"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

